Refactor ShoppingItemResponse and AmountResponse DTOs
- Replace individual fields for item creator with a UserResponse object in ShoppingItemResponse
- Update AmountResponse to use currency code as a string instead of Currency object
- Adjust integration tests to validate new structure for addedBy and amount fields
- Modify logging level in application-local-pg.yaml for improved debugging